# stopgerrymandering

./: README.md  create_districts.py
redistricting/: pyproject.toml
redistricting/config/: states.yaml
redistricting/scripts/: redistrict
redistricting/src/redistricting/: __init__.py  assign.py  cli.py  config.py  graph.py  init.py  io.py  metrics.py  optimize.py  viz.py
