[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redistricting"
version = "0.1.0"
description = "Config-driven redistricting pipeline"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"
dependencies = [
  "geopandas",
  "networkx",
  "numpy",
  "pandas",
  "pyyaml",
  "shapely",
  "matplotlib",
]

[project.scripts]
redistrict = "redistricting.cli:main"
